# Contextual-Subtitle-Studio

./: .gitignore  LICENSE  README.md  SPEC.md  index.html  package-lock.json  package.json
scripts/: diagnose-surface-mapping.ts
src/: App.css  App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: envstore.rs  lib.rs  log.rs  main.rs  web_search.rs
src-tauri/src/character_dict/: alias.rs  mod.rs
src-tauri/src/commands/: dictionary.rs  drama_info.rs  ja_kanji.rs  ja_kanji_batch.rs  llm.rs  mod.rs  project.rs  scraper.rs  service_settings.rs  srt.rs  synopsis.rs  translation.rs  util.rs
src-tauri/src/dictionary/: characters.rs  glossary.rs  mod.rs
src-tauri/src/llm/: client.rs  config.rs  mod.rs  preset.rs  prompts.rs
src-tauri/src/merge/: mod.rs
src-tauri/src/project/: config.rs
src-tauri/src/scraper/: douban.rs  mod.rs  mydramalist.rs  tmdb.rs  tvmao.rs
src-tauri/src/srt/: mod.rs  parser.rs  writer.rs
src-tauri/src/translation/: mod.rs  pipeline.rs  scene_detector.rs  validator.rs
src/components/dictionary/: CharacterDict.tsx  GlossaryTable.tsx
src/components/layout/: AppLogPanel.tsx  Sidebar.tsx  TopBar.tsx
src/components/llm/: ProviderConfig.tsx
src/components/project/: ProjectSetup.tsx
src/lib/: chatGptPaste.ts  dictionarySync.ts  prompt.ts  tauri.ts  urlCleaner.test.ts  urlCleaner.ts
src/stores/: useAppLogStore.ts  useDictionaryStore.ts  useLlmStore.ts  useProjectStore.ts  useScraperStore.ts  useSrtStore.ts  useTranslationStore.ts
src/types/: index.ts
(+15 files in other folders)
